tests/NormalTests/paczka1/fuzzy1/35779904.err
Error in line 4: A946 A796 94,1
Error in line 7: 3EZZ A22 60,9
Error in line 14: s66Sja7oA2B A554 58,6
Error in line 20: 3EZZ A22 18,1
Error in line 18: C8t A796 92,4
Error in line 21: 3EZZ A796 37,9
Error in line 16: wJZ81U A946 26,6
